add phi-to-xmir CACHE dir constant, change tests